@@ -26,7 +26,6 @@ function usage()
   echo "Usage: $PRG [OPTIONS] [INPUT] [OUTPUT]"
   echo
   echo "  Options are:"
-  echo "    -I           startup Isar interaction mode"
   echo "    -O           system options from given YXML file"
   echo "    -S           secure mode -- disallow critical operations"
   echo "    -T ADDR      startup process wrapper, with socket address"
@@ -57,7 +56,6 @@ function fail()
 
 # options
 
-ISAR=""
 OPTIONS_FILE=""
 SECURE=""
 WRAPPER_SOCKET=""
@@ -69,12 +67,9 @@ TERMINATE=""
 READONLY=""
 NOWRITE=""
 
-while getopts "IO:ST:W:e:m:o:qrw" OPT
+while getopts "O:ST:W:e:m:o:qrw" OPT
 do
   case "$OPT" in
-    I)
-      ISAR=true
-      ;;
     O)
       OPTIONS_FILE="$OPTARG"
       ;;
@@ -208,8 +203,6 @@ ML_SYSTEM_BASE=$(echo "$ML_SYSTEM" | cut -f1 -d-)
 
 [ -n "$SECURE" ] && MLTEXT="$MLTEXT; Secure.set_secure ();"
 
-NICE="nice"
-
 if [ -n "$WRAPPER_SOCKET" ]; then
   MLTEXT="$MLTEXT; Isabelle_Process.init_socket \"$WRAPPER_SOCKET\";"
 elif [ -n "$WRAPPER_FIFOS" ]; then
@@ -232,19 +225,14 @@ else
   if [ "$INPUT" != RAW_ML_SYSTEM -a "$INPUT" != RAW ]; then
     MLTEXT="Exn.capture_exit 2 Options.load_default (); $MLTEXT"
   fi
-  if [ -n "$ISAR" ]; then
-    MLTEXT="$MLTEXT; Isar.main ();"
-  else
-    NICE=""
-  fi
 fi
 
 export INFILE OUTFILE MLTEXT TERMINATE NOWRITE ISABELLE_PID ISABELLE_TMP ISABELLE_PROCESS_OPTIONS
 
 if [ -f "$ISABELLE_HOME/lib/scripts/run-$ML_SYSTEM" ]; then
-  $NICE "$ISABELLE_HOME/lib/scripts/run-$ML_SYSTEM"
+  "$ISABELLE_HOME/lib/scripts/run-$ML_SYSTEM"
 else
-  $NICE "$ISABELLE_HOME/lib/scripts/run-$ML_SYSTEM_BASE"
+  "$ISABELLE_HOME/lib/scripts/run-$ML_SYSTEM_BASE"
 fi
 RC="$?"
 
